3. Junit тест для блокирующей очереди.[#227914]