@@ -2,7 +2,9 @@ package ru.job4j.waitnotify;
 
 import org.junit.Test;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.stream.IntStream;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -10,34 +12,36 @@ import static org.junit.Assert.*;
 public class SimpleBlockingQueueTest {
 
     @Test
-    public void whenTestClassBlockQueue() throws InterruptedException {
-        SimpleBlockingQueue<Integer> producerQueue = new SimpleBlockingQueue<>(5);
-        Thread producer = new Thread(() -> {
-            for (int i = 1; i <= 5; i++) {
-                try {
-                    producerQueue.offer(i);
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
+    public void whenFetchAllThenGetIt() throws InterruptedException {
+        final CopyOnWriteArrayList<Integer> buffer = new CopyOnWriteArrayList<>();
+        final SimpleBlockingQueue<Integer> queue = new SimpleBlockingQueue<>(2);
+        Thread producer = new Thread(
+                () -> IntStream.range(0, 5).forEach(
+                        i -> {
+                            try {
+                                queue.offer(i);
+                            } catch (InterruptedException e) {
+                                Thread.currentThread().interrupt();
+                            }
+                        }
+                )
+        );
+        Thread consumer = new Thread(
+                () -> {
+                    while (queue.getSize() != 0 || !Thread.currentThread().isInterrupted()) {
+                        try {
+                            buffer.add(queue.poll());
+                        } catch (InterruptedException e) {
+                            Thread.currentThread().interrupt();
+                        }
+                    }
                 }
-            }
-        });
-        Thread consumer = new Thread(() -> {
-            while (producerQueue.getSize() > 2) {
-                try {
-                    producerQueue.poll();
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
-            }
-        });
+        );
         producer.start();
         consumer.start();
         producer.join();
+        consumer.interrupt();
         consumer.join();
-
-        List<Integer> result = producerQueue.getElement();
-
-        assertThat(producerQueue.getSize(), is(2));
-        assertThat(result, is(List.of(4, 5)));
+        assertThat(buffer, is(Arrays.asList(0, 1, 2, 3, 4)));
     }
 }
